# QuEStVar

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
data/: demo_full.tsv  demo_realistic.tsv
docs/: contributing.md  hooks.py  index.md
docs/api/: functions.md  plot_config.md  power_results.md  questvar.md  test_results.md
docs/guides/: cli.md  configuration.md  plotting.md
docs/notebooks/: power_analysis.py  quick_start.py
docs/stylesheets/: notebook.css
src/questvar/: __init__.py  __main__.py  _api.py  _cli.py  _config.py  _correction.py  _cv.py  _special.py  _test.py  _ttest.py  _validate.py  test.py
src/questvar/plot/: __init__.py  _annotate.py  _config.py  _helpers.py  antlers.py  power.py  summary.py  test.py
src/questvar/power/: __init__.py  _simulate.py  run.py
tests/: _r_reference.py  conftest.py  test_api.py  test_benchmark.py  test_cli.py  test_config.py  test_correction.py  test_cv.py  test_io_benchmark.py  test_plot.py  test_power.py  test_r_references.py  test_special.py  test_speed.py  test_suite_audit.py  test_ttest.py  test_validate.py
tests/r/: questvar_reference.R
tools/: compare.py  make_demo.py  power_demo.py  synthesize.py
