[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questvar"
version = "0.1.0"
description = "Framework for running Equivalence and difference testing in tandem. Vectorized TOST + Welch t-test with CV-based filtering, MTC, and power analysis."
readme = "README.md"
license = "MIT"
authors = [
    { name = "eneskemalergin", email = "eneskemalergin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "polars>=1.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
yaml = ["pyyaml>=6.0"]
cli = ["typer>=0.9"]
accel = ["numba>=0.59"]
all = ["questvar[plots,yaml,cli,accel]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.26",
]

[project.scripts]
questvar = "questvar._cli:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"tests/test_ttest.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
