[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questvar"
version = "0.1.0"
description = "Vectorized equivalence and difference testing for quantitative omics data. TOST + Welch t-test with CV-based filtering, multiple testing correction, and power analysis."
readme = "README.md"
license = "MIT"
authors = [
    { name = "eneskemalergin", email = "eneskemalergin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "polars>=1.40.1",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.26",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
]

[project.scripts]
questvar = "questvar._cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"src/questvar/_api.py" = ["E501"]
"src/questvar/_cli.py" = ["E501"]
"src/questvar/plot/*.py" = ["E501"]
"src/questvar/plot/_config.py" = ["E501"]
"src/questvar/plot/power.py" = ["E501"]
"src/questvar/power/run.py" = ["E501"]
"tests/test_api.py" = ["E501"]
"tests/test_correction.py" = ["E501"]
"tests/test_ttest.py" = ["E501"]
"tests/test_power.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not r_reference"]
markers = [
    "r_reference: R-backed reference tests that require R packages and are excluded from the default test suite",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "ref/",
    "dev/",
    "real/",
    "tmp/",
    "tools/",
]
