[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questvar"
version = "0.1.0"
description = "Vectorized equivalence and difference testing for quantitative omics data. TOST + Welch t-test with CV-based filtering, multiple testing correction, and power analysis."
readme = "README.md"
license = "MIT"
authors = [
    { name = "eneskemalergin", email = "eneskemalergin@gmail.com" }
]
keywords = ["statistics", "hypothesis-testing", "equivalence-testing", "omics", "proteomics", "tost", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "polars>=1.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.10.0"]
yaml = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/eneskemalergin/QuEStVar"
Repository = "https://github.com/eneskemalergin/QuEStVar"
Documentation = "https://eneskemalergin.github.io/QuEStVar/"

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "ipykernel>=6.29",
    "jupytext>=1.16",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6",
    "mkdocs-jupyter>=0.24",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/questvar/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/questvar"]

[project.scripts]
questvar = "questvar._cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"src/questvar/_api.py" = ["E501"]
"src/questvar/_cli.py" = ["E501"]
"src/questvar/plot/*.py" = ["E501"]
"src/questvar/plot/_config.py" = ["E501"]
"src/questvar/plot/power.py" = ["E501"]
"src/questvar/power/run.py" = ["E501"]
"tests/test_api.py" = ["E501"]
"tests/test_correction.py" = ["E501"]
"tests/test_ttest.py" = ["E501"]
"tests/test_power.py" = ["E501"]
"docs/**" = ["E501", "E402", "B018"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not r_reference"]
markers = [
    "r_reference: R-backed reference tests that require R packages and are excluded from the default test suite",
]

[tool.hypothesis]
phases = "generate"

[tool.hypothesis.ci]
max_examples = 200
derandomize = true
suppress_health_check = ["too_slow"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "ref/",
    "dev/",
    "real/",
    "tmp/",
    "tools/",
]
